[package]
name = "kvs"
version = "0.1.0"
edition = "2021"
author = "Arthur Matthys"
description = "A key-value store"


[dev-dependencies]
assert_cmd = "2.0.10"
predicates = "3.0"
tempfile = "3.5.0"
walkdir = "2.3.3"

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
failure = {version = "0.1.8", features = ["derive"]}
serde = { version= "1.0.159", features = ["derive"]}
serde_json = "1.0.95"
tempfile = "3.5.0"
