[package]
name = "kvs"
version = "0.1.0"
edition = "2021"
author = "Arthur Matthys"
description = "A key-value store"

[[bin]]
name = "client"
path = "src/bin/kvs-client.rs"

[[bin]]
name = "server"
path = "src/bin/kvs-server.rs"

[dev-dependencies]
assert_cmd = "2.0.10"
criterion = "0.4.0"
predicates = "3.0"
rand = "0.8.5"
tempfile = "3.5.0"
walkdir = "2.3.3"

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
failure = {version = "0.1.8", features = ["derive"]}
slog = "2.7"
serde = { version= "1.0.159", features = ["derive"]}
serde_json = "1.0.95"
tempfile = "3.5.0"
slog-term = "2.9.0"
